Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105226

GCC 13 produces -Wstringop-overflow= warning for qv4vme_moth.cpp

XMLWordPrintable

    • Linux/Other display system
    • 560205ffa6 (qt/qtdeclarative/dev) 560205ffa6 (qt/tqtc-qtdeclarative/dev) 560205ffa6 (qt/qtdeclarative/wip/material3) 560205ffa6 (qt/tqtc-qtdeclarative/wip/material3)

      When compiling qv4vme_moth, GCC 13 produces a -Wstringop-overflow= warning which originates from qv4profiling_p.h.

      Configured with:

      ../qt5/configure -release -shared -developer-build -c++std c++2b -submodules qtbase,qtdeclarative -nomake tests -- -DWARNINGS_ARE_ERRORS=OFF
      

      The warning:

      [2073/2801] Building CXX object qtdeclarative/src/qml/CMakeFiles/Qml.dir/jsruntime/qv4vme_moth.cpp.o
      In file included from /opt/gcc-13-git/include/c++/13.0.0/atomic:41,
                       from /qt5/qtbase/src/corelib/thread/qatomic_cxx11.h:9,
                       from /build/qtbase/include/QtCore/qatomic_cxx11.h:1,
                       from /qt5/qtbase/src/corelib/thread/qbasicatomic.h:17,
                       from /build/qtbase/include/QtCore/qbasicatomic.h:1,
                       from /qt5/qtbase/src/corelib/thread/qatomic.h:10,
                       from /build/qtbase/include/QtCore/qatomic.h:1,
                       from /qt5/qtbase/src/corelib/global/qglobal.h:1351,
                       from /build/qtbase/include/QtCore/qglobal.h:1,
                       from /build/qtbase/include/QtCore/QtCore:4,
                       from /build/qtdeclarative/src/qml/CMakeFiles/Qml.dir/cmake_pch.hxx:5,
                       from <command-line>:
      In member function ‘std::__atomic_base<_IntTp>::__int_type std::__atomic_base<_IntTp>::fetch_add(__int_type, std::memory_order) [with _ITp = int]’,
          inlined from ‘static bool QAtomicOps<X>::ref(std::atomic<T>&) [with T = int; X = int]’ at /qt5/qtbase/src/corelib/thread/qatomic_cxx11.h:258:34,
          inlined from ‘bool QBasicAtomicInteger<T>::ref() [with T = int]’ at /qt5/qtbase/src/corelib/thread/qbasicatomic.h:65:42,
          inlined from ‘void QQmlRefCount::addref() const’ at /build/qtbase/include/QtQml/6.5.0/QtQml/private/../../../../../../../qt5/qtdeclarative/src/qml/qml/ftw/qqmlrefcount_p.h:120:17,
          inlined from ‘QV4::Profiling::FunctionCall::FunctionCall(const QV4::Profiling::FunctionCall&)’ at /build/qtbase/include/QtQml/6.5.0/QtQml/private/../../../../../../../qt5/qtdeclarative/src/qml/jsruntime/qv4profiling_p.h:115:54,
          inlined from ‘void QtPrivate::QMovableArrayOps<T>::emplace(qsizetype, Args&& ...) [with Args = {QV4::Profiling::FunctionCall}; T = QV4::Profiling::FunctionCall]’ at /qt5/qtbase/src/corelib/tools/qarraydataops.h:780:11:
      /opt/gcc-13-git/include/c++/13.0.0/bits/atomic_base.h:634:34: warning: ‘unsigned int __atomic_add_fetch_4(volatile void*, unsigned int, int)’ writing 4 bytes into a region of size 0 overflows the destination [-Wstringop-overflow=]
        634 |       { return __atomic_fetch_add(&_M_i, __i, int(__m)); }
            |                ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qtqmlteam Qt Qml Team User
            jkauffmann Johannes Kauffmann
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes