Profiler: Add move operations to FunctionCall

This requires us to check the pointer on destruction, but should make
list operations faster, due to the refcount becoming unnecessary.

It also fixes some compiler warnings.

Fixes: QTBUG-105226
Change-Id: I4b1fe65f08fa89b6b305c34e07e12ff5e165a9f7
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>